# justembed

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: examples.html  getting-started.html  guide.html  index.html  reference.html  robots.txt  search.json  sitemap.xml
docs/site_libs/bootstrap/: bootstrap-8a48fa2b5fd345c4364202b30c6890b5.min.css
justembed/: __init__.py  api.py  app.py  chunker.py  cli.py  config.py  db.py  embedder.py  jobs.py  worker.py
justembed/examples/: README_MEDICAL_DEMO.md  apple_tree.txt  diverse_topics.txt  diverse_topics_v2.txt  finance_economics.txt  medical_embedding_demo.txt  medical_kb_documents.txt  uti_renal_fever.txt
justembed/models/core/: model_loader.py
justembed/templates/: chunk_preview.html  embed_progress.html  index.html  job_status.html  jobs.html  query_results.html  setup.html  train_model.html  train_success.html  upload_to_kb.html
justembed/training/: __init__.py  trainer.py
quarto/: README.md  _quarto.yml  examples.qmd  getting-started.qmd  guide.qmd  index.qmd  paper_draft.txt  reference.qmd
