[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justembed"
version = "0.1.1a7"
description = "Your First Step Into Semantic Search. Experience embeddings hands-on with no cloud accounts required."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Krishnamoorthy Sankaran", email = "krishnamoorthy.sankaran@sekrad.org"}
]
keywords = ["semantic-search", "embeddings", "offline", "onnx", "nlp", "justembed", "lens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "onnxruntime>=1.15.0",
    "tokenizers>=0.13.0",
    "numpy>=1.20.0,<2.0.0",
    "duckdb>=0.9.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "skl2onnx>=1.15.0",
    "onnx>=1.14.0,<1.19.0",
    "ml-dtypes>=0.4.0,<0.5.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[project.scripts]
justembed = "justembed.cli:main"

[project.urls]
Homepage = "https://github.com/sekarkrishna/justembed"
Repository = "https://github.com/sekarkrishna/justembed"
Issues = "https://github.com/sekarkrishna/justembed/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["justembed*"]

[tool.setuptools.package-data]
justembed = ["models/core/*.tar.gz", "templates/**/*", "examples/**/*"]
